--- a/AlreadyHave2.html
+++ b/AlreadyHave2.html
@@ -15,7 +15,7 @@
   <html>
 <title>HTML Tutorial</title>
 <body>
-  <h1><a href = "main.html">Style-itch</a></h1>
+  <h1><a href = "index.html">Style-itch</a></h1>
   
 <ul>
   <li><a href="AlreadyHave2.html">My Closet</a></li>
