--- a/AlreadyHave1.html
+++ b/AlreadyHave1.html
@@ -11,7 +11,7 @@
   
 </head>
 <body>
-   <h1><a href = "main.html">Style-itch</a></h1>
+   <h1><a href = "index.html">Style-itch</a></h1>
   
 <ul>
   <li><a href="AlreadyHave1.html">My Closet</a></li>
