--- a/AddNew.html
+++ b/AddNew.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <h1><a href = "main.html">Style-itch</a></h1>
+  <h1><a href = "index.html">Style-itch</a></h1>
 
   <ul>
     <li><a href="AlreadyHave1.html">My Closet</a></li>
