--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1><a href = "main.html">Style-itch</a></h1>
   
 <ul>
-  <li><a href="ALreadyHave1.html">My Closet</a></li>
+  <li><a href="AlreadyHave1.html">My Closet</a></li>
   <li><a href="MyCalendar.html">My Calendar</a></li>
   <li><a href="MyStylist.html">My Stylist</a></li>
   <li><a href="P&H1.html">Purchases & History</a></li>
