--- a/Addbudget.html
+++ b/Addbudget.html
@@ -34,7 +34,7 @@
     </div>
 
 <ul>
-  <li><a href="ALreadyHave1.html">My Closet</a></li>
+  <li><a href="AlreadyHave1.html">My Closet</a></li>
   <li><a href="MyCalendar.html">My Calendar</a></li>
   <li><a href="MyStylist.html">My Stylist</a></li>
    <li><a href="P&H1.html"> Purchase&history    
