--- a/MyStylist.html
+++ b/MyStylist.html
@@ -61,6 +61,7 @@
     <p class = "Cbox">From: <input type="datetime-local" name="bdaytime" style = "font-size: 24px;"> to <input type="datetime-local" name="bdaytime" style = "font-size: 24px;"></p>
   </form>
   <br>
+  <form action="demo_form.asp">
   <p class = 'Title'>Style:</p>
   <p class = "Cbox"><input type="Radio" name="vehicle" value="Bike"> Trendy</p>
   <p class = "Cbox"><input type="Radio" name="vehicle" value="Car"> Casual</p>
@@ -74,6 +75,7 @@
   <p class = "Cbox"><input type="Radio" name="vehicle" value="Car"> Girly</p>
   <p class = "Cbox"><input type="Radio" name="vehicle" value="Car"> Punk</p>
   <p class = "Cbox"><input type="Radio" name="vehicle" value="Car"> Rocker</p>
+  </form>
   <br>
   <br>
   <p class = 'Title'>Are you willing to purchase clothes for this event?</p>
