--- a/MyStylist1.html
+++ b/MyStylist1.html
@@ -47,7 +47,9 @@
     <a href="MyStylist.html">Add Events</a>
     <br>
     <br>
-    <a href="CheckEvents.html">Check Events</a>
+    <a href="MyStylist1.html">Check Events</a>
+     <br>    <br>
+    <a href="calendar.html">Calendar</a>
  </div>
  
 <div class="main">    
