--- a/MyStylist.html
+++ b/MyStylist.html
@@ -39,11 +39,13 @@
 </ul>
   
 <div class = "bg">
-<div class="sidenav">
+ <div class="sidenav">
     <a href="MyStylist.html">Add Events</a>
     <br>
     <br>
-    <a href="CheckEvents.html">Check Events</a>
+    <a href="MyStylist1.html">Check Events</a>
+     <br>    <br>
+    <a href="calendar.html">Calendar</a>
  </div>
  
 <div class="main">    
