--- a/AlreadyHave1.html
+++ b/AlreadyHave1.html
@@ -15,7 +15,7 @@
   
 <ul>
   <li><a href="AlreadyHave1.html">My Closet</a></li>
-  <li><a href="MyCalendar.html">My Calendar</a></li>
+  <li><a href="calendar.html">My Calendar</a></li>
   <li><a href="MyStylist.html">My Stylist</a></li>
   <li><a href="P&H1.html">Purchases & History</a></li>
   <li><a href="Help.html">Help</a></li> 
