--- a/MyStylist1.html
+++ b/MyStylist1.html
@@ -35,7 +35,7 @@
 
 <ul>
   <li><a href="AlreadyHave1.html">My Closet</a></li>
-  <li><a href="MyCalendar.html">My Calendar</a></li>
+  <li><a href="calendar.html">My Calendar</a></li>
   <li><a href="MyStylist.html">My Stylist</a></li>
    <li><a href="P&H1.html"> Purchase&history    
     </a></li>
