--- a/MyStylist.html
+++ b/MyStylist.html
@@ -84,7 +84,7 @@
   <p class = "Cbox"><input type="Radio" name="vehicle" value="Bike"> Yes</p>
   <p class = "Cbox"><input type="Radio" name="vehicle" value="Car"> No</p>
   <p class = "Cbox">(If Yes, budget: <input type="text" name="Name" value="  $100" style = "font-size: 24px;">)</p>
-  <p class = "sub"><a href = "MyStylist.html">Submit</a>
+  <p class = "sub"><a href = "MyStylist1.html">Submit</a>
 </form>
     
 </div>
